--- a/knqiufan-rpc-demo-consumer/src/main/resources/application.yml
+++ b/knqiufan-rpc-demo-consumer/src/main/resources/application.yml
@@ -2,3 +2,7 @@ server:
   port: 8088
 knrpc:
   providers: http://localhost:8081, http://localhost:8082, http://localhost:8083
+app:
+  id: app1
+  namespace: knqiufan
+  env: dev
