--- a/knqiufan-rpc-demo-consumer/src/main/resources/application.yml
+++ b/knqiufan-rpc-demo-consumer/src/main/resources/application.yml
@@ -2,6 +2,8 @@ server:
   port: 8088
 knrpc:
   providers: http://localhost:8081, http://localhost:8082, http://localhost:8083
+  zkServer: 111.231.54.184:2181
+  zkRoot: knqiufan-rpc
 app:
   id: app1
   namespace: knqiufan
