--- a/knqiuan-rpc-core/pom.xml
+++ b/knqiuan-rpc-core/pom.xml
@@ -11,22 +11,16 @@
 
   <artifactId>knqiuan-rpc-core</artifactId>
 
-  <properties>
-    <maven.compiler.source>17</maven.compiler.source>
-    <maven.compiler.target>17</maven.compiler.target>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
-
   <dependencies>
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
-      <version>3.0.6</version>
+      <version>${spring.boot.version}</version>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
-      <version>3.1.3</version>
+      <version>${spring.boot.version}</version>
     </dependency>
     <dependency>
       <groupId>com.squareup.okhttp3</groupId>
