--- a/knqiufan-rpc-demo-provider/pom.xml
+++ b/knqiufan-rpc-demo-provider/pom.xml
@@ -11,11 +11,6 @@
 
   <artifactId>knqiufan-rpc-demo-provider</artifactId>
 
-  <properties>
-    <maven.compiler.source>17</maven.compiler.source>
-    <maven.compiler.target>17</maven.compiler.target>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
   <dependencies>
     <dependency>
       <groupId>cn.knqiufan.rpc</groupId>
@@ -32,12 +27,12 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
-      <version>3.0.6</version>
+      <version>${spring.boot.version}</version>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
-      <version>3.0.6</version>
+      <version>${spring.boot.version}</version>
       <exclusions>
         <exclusion>
           <groupId>org.slf4j</groupId>
