--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
   </modules>
 
   <properties>
+    <spring.boot.version>3.2.3</spring.boot.version>
     <maven.compiler.source>17</maven.compiler.source>
     <maven.compiler.target>17</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
