--- a/knqiuan-rpc-core/pom.xml
+++ b/knqiuan-rpc-core/pom.xml
@@ -10,6 +10,9 @@
   </parent>
 
   <artifactId>knqiuan-rpc-core</artifactId>
+  <version>1.0-SNAPSHOT</version>
+  <name>knqiufan-rpc-demo-core</name>
+  <description>knqiufan-rpc-demo-core</description>
 
   <dependencies>
     <dependency>
