--- a/knqiuan-rpc-core/pom.xml
+++ b/knqiuan-rpc-core/pom.xml
@@ -55,5 +55,10 @@
       <artifactId>curator-recipes</artifactId>
       <version>5.1.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.curator</groupId>
+      <artifactId>curator-test</artifactId>
+      <version>4.2.0</version>
+    </dependency>
   </dependencies>
 </project>
