add user service exception test

--- a/knqiufan-rpc-demo-provider/src/test/resources/application.yml
+++ b/knqiufan-rpc-demo-provider/src/test/resources/application.yml
@@ -6,8 +6,8 @@ knrpc:
   zkRoot: knqiufan-rpc
 app:
   id: app1
-  namespace: public
-  env: env
+  namespace: knqiufan
+  env: dev
 logging:
   level:
     root: error
