--- a/knqiufan-rpc-demo-consumer/pom.xml
+++ b/knqiufan-rpc-demo-consumer/pom.xml
@@ -37,7 +37,12 @@
       <artifactId>knqiuan-rpc-core</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
-
+    <dependency>
+      <groupId>cn.knqiufan.rpc</groupId>
+      <artifactId>knqiufan-rpc-demo-provider</artifactId>
+      <version>1.0-SNAPSHOT</version>
+      <scope>test</scope>
+    </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
